--- a/content/data/config.json
+++ b/content/data/config.json
@@ -35,7 +35,7 @@
             {
                 "label": "Style Guide",
                 "url": "/style-guide",
-                "style": "link"
+                "style": "primary"
             }
         ],
         "has_secondary_nav": true,
