config.json: updated label in secondary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -46,7 +46,7 @@
                 "style": "link"
             },
             {
-                "label": "Get Started",
+                "label": "Book Now",
                 "url": "/pricing",
                 "style": "primary"
             }
