config.json: updated label in primary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -18,7 +18,7 @@
                 "style": "link"
             },
             {
-                "label": "Book A Property",
+                "label": "Rent Now",
                 "url": "/pricing",
                 "style": "link"
             },
