--- a/content/data/config.json
+++ b/content/data/config.json
@@ -7,7 +7,7 @@
     "mode": "light",
     "base_font": "serif",
     "header": {
-        "title": "DIY",
+        "title": "Caramelo Properties",
         "logo": "images/Caramelo_Logo.png",
         "logo_alt": "DIY logo",
         "has_primary_nav": true,
