--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "title": "Caramelo Properties",
     "path_prefix": "/",
     "layout_type": "boxed",
-    "style": "classic",
+    "style": "bold",
     "palette": "blue",
     "mode": "light",
     "base_font": "serif",
