--- a/content/data/config.json
+++ b/content/data/config.json
@@ -5,7 +5,7 @@
     "style": "classic",
     "palette": "red",
     "mode": "light",
-    "base_font": "sans-serif",
+    "base_font": "serif",
     "header": {
         "title": "Caramelo Properties",
         "logo": "images/Caramelo_Logo.png",
