config.json: updated anncmnt_content in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -52,7 +52,7 @@
             }
         ],
         "has_anncmnt": true,
-        "anncmnt_content": "Curabitur ac tellus mattis, tempor ipsum eu, eleifend sapien. **[Learn More](/pricing/)**",
+        "anncmnt_content": "**B2 Townhouse** is now available for direct booking. [**Learn More**](/pricing/)\n",
         "anncmnt_align": "left",
         "anncmnt_is_home_only": true,
         "anncmnt_has_close": true,
