--- a/content/data/team/gustav-purpleson.yaml
+++ b/content/data/team/gustav-purpleson.yaml
@@ -1,6 +1,6 @@
 id: gustav-purpleson
 link: blog/author/gustav-purpleson
-first_name: Gustav
+first_name: Mina
 last_name: Purpleson
 photo: images/dianne-ameter.jpg
 photo_alt: Gustav Purpleson
