--- a/content/data/team/gustav-purpleson.yaml
+++ b/content/data/team/gustav-purpleson.yaml
@@ -1,6 +1,6 @@
 id: gustav-purpleson
 link: blog/author/gustav-purpleson
 first_name: Mina
-last_name: Purpleson
+last_name: Oh
 photo: images/dianne-ameter.jpg
 photo_alt: Gustav Purpleson
