--- a/content/data/team/dianne-ameter.yaml
+++ b/content/data/team/dianne-ameter.yaml
@@ -1,6 +1,6 @@
 id: dianne-ameter
 link: blog/author/dianne-ameter
 first_name: Mina
-last_name: Ameter
+last_name: Oh
 photo: images/dianne-ameter.jpg
 photo_alt: Dianne Ameter
