config.json: updated url in primary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -14,7 +14,7 @@
         "primary_nav_links": [
             {
                 "label": "Our Properties",
-                "url": "/features",
+                "url": "/properties",
                 "style": "link"
             },
             {
