--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stackbit-diy-theme",
+  "name": "caramelo-properties",
   "description": "Stackbit DIY Theme",
   "version": "0.0.1",
   "license": "MIT",
