package.json: changed

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "caramelo-properties",
-  "description": "Stackbit DIY Theme",
+  "description": "Caramelo Properties",
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
