--- a/content/data/config.json
+++ b/content/data/config.json
@@ -110,33 +110,33 @@
         ],
         "has_social": true,
         "social_links": [
-            {
-                "label": "Twitter",
-                "url": "https://twitter.com/",
-                "style": "link",
-                "has_icon": true,
-                "icon": "twitter",
-                "icon_position": "center",
-                "new_window": true
-            },
-            {
-                "label": "GitHub",
-                "url": "https://github.com/",
-                "style": "link",
-                "has_icon": true,
-                "icon": "github",
-                "icon_position": "center",
-                "new_window": true
-            },
-            {
-                "label": "LinkedIn",
-                "url": "https://www.linkedin.com/",
-                "style": "link",
-                "has_icon": true,
-                "icon": "linkedin",
-                "icon_position": "center",
-                "new_window": true
-            },
+            // {
+            //     "label": "Twitter",
+            //     "url": "https://twitter.com/",
+            //     "style": "link",
+            //     "has_icon": true,
+            //     "icon": "twitter",
+            //     "icon_position": "center",
+            //     "new_window": true
+            // },
+            // {
+            //     "label": "GitHub",
+            //     "url": "https://github.com/",
+            //     "style": "link",
+            //     "has_icon": true,
+            //     "icon": "github",
+            //     "icon_position": "center",
+            //     "new_window": true
+            // },
+            // {
+            //     "label": "LinkedIn",
+            //     "url": "https://www.linkedin.com/",
+            //     "style": "link",
+            //     "has_icon": true,
+            //     "icon": "linkedin",
+            //     "icon_position": "center",
+            //     "new_window": true
+            // },
             {
                 "label": "YouTube",
                 "url": "https://www.youtube.com/",
