config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -160,7 +160,7 @@
                 "url": "https://facebook.com/carameloproperties",
                 "style": "link",
                 "has_icon": true,
-                "icon": "vimeo",
+                "icon": "facebook",
                 "icon_position": "center",
                 "new_window": true
             }
