--- a/content/data/config.json
+++ b/content/data/config.json
@@ -27,16 +27,16 @@
                 "url": "/about",
                 "style": "link"
             },
-            {
-                "label": "Blog",
-                "url": "/blog",
-                "style": "link"
-            },
-            {
-                "label": "Style Guide",
-                "url": "/style-guide",
-                "style": "link"
-            }
+            // {
+            //     "label": "Blog",
+            //     "url": "/blog",
+            //     "style": "link"
+            // },
+            // {
+            //     "label": "Style Guide",
+            //     "url": "/style-guide",
+            //     "style": "link"
+            // }
         ],
         "has_secondary_nav": true,
         "secondary_nav_links": [
