--- a/content/data/config.json
+++ b/content/data/config.json
@@ -166,7 +166,7 @@
             }
 
         ],
-        "content": "&copy; Stackbit. All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=diy&utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">now</a>"
+        "content": "&copy; Caramelo Properties. All rights reserved."
     },
     "domain": "https://caramelo-properties-8fb73.netlify.app",
     "favicon": "images/favicon.ico"
