config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -9,7 +9,7 @@
     "header": {
         "title": "Caramelo Properties",
         "logo": "images/Caramelo_Logo.png",
-        "logo_alt": "DIY logo",
+        "logo_alt": "Caramelo Logo",
         "has_primary_nav": true,
         "primary_nav_links": [
             {
