--- a/content/data/config.json
+++ b/content/data/config.json
@@ -52,7 +52,7 @@
             }
         ],
         "has_anncmnt": true,
-        "anncmnt_content": "**B2 Townhouse** is now available for direct booking. [**Learn More**](/pricing/)\n",
+        "anncmnt_content": "**B2 Townhouse** is now available for direct booking. [**Learn More**](/properties/b2-townhouse)\n",
         "anncmnt_align": "left",
         "anncmnt_is_home_only": true,
         "anncmnt_has_close": true,
