config.json: updated domain

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -112,6 +112,6 @@
         ],
         "content": "&copy; Caramelo Properties. All rights reserved."
     },
-    "domain": "https://caramelo-properties-8fb73.netlify.app",
+    "domain": "https://carameloproperties.netlify.app",
     "favicon": "images/favicon.ico"
 }
