--- a/content/data/config.json
+++ b/content/data/config.json
@@ -61,7 +61,7 @@
             },
             {
                 "label": "Contact",
-                "url": "/style-guide",
+                "url": "/contact",
                 "style": "link"
             }
         ],
