--- a/content/data/config.json
+++ b/content/data/config.json
@@ -70,7 +70,7 @@
         "secondary_nav_links": [
             {
                 "label": "News",
-                "url": "/blog/category/news",
+                "url": "#",
                 "style": "link"
             },
             {
