--- a/content/data/config.json
+++ b/content/data/config.json
@@ -75,7 +75,7 @@
             },
             {
                 "label": "General",
-                "url": "/#",
+                "url": "#",
                 "style": "link"
             },
             {
