config.json: updated url in secondary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -80,7 +80,7 @@
             },
             {
                 "label": "Tutorials",
-                "url": "/blog/category/tutorials",
+                "url": "#",
                 "style": "link"
             }
         ],
